--- a/notebooks/Reticulate Setup.Rmd
+++ b/notebooks/Reticulate Setup.Rmd
@@ -16,6 +16,11 @@ reticulate::py_config()
 ```
 
 ```{r}
+virtualenv_dir
+```
+
+
+```{r}
 virtualenv_dir = Sys.getenv('VIRTUALENV_NAME')
 python_path = Sys.getenv('PYTHON_PATH')
 
@@ -24,9 +29,9 @@ virtualenv_list <-  reticulate::virtualenv_list()
 PYTHON_DEPENDENCIES = c("numpy", "joblib", "scikit-learn", "tensorflow")
 
 # Create New Virtual Environment if Needed
-if (!(virtualenv_dir %in% virtualenv_list)){
-  reticulate::virtualenv_create(envname = virtualenv_dir, python = python_path)
-}
+# if (!(virtualenv_dir %in% virtualenv_list)){
+#   reticulate::virtualenv_create(envname = virtualenv_dir, python = python_path)
+# }
 
 reticulate::virtualenv_install(virtualenv_dir, packages = PYTHON_DEPENDENCIES, ignore_installed=TRUE)
 
