--- a/notebooks/setup_reticulate.Rmd
+++ b/notebooks/setup_reticulate.Rmd
@@ -31,10 +31,10 @@ PYTHON_DEPENDENCIES = c("numpy", "joblib", "scikit-learn", "tensorflow",
                                   # python = python_path)
 # }
 
-reticulate::virtualenv_install(virtualenv_dir, packages = PYTHON_DEPENDENCIES, 
-                               ignore_installed=TRUE)
-
-reticulate::use_virtualenv(virtualenv_dir, required = TRUE)
+# reticulate::virtualenv_install(virtualenv_dir, packages = PYTHON_DEPENDENCIES, 
+#                                ignore_installed=TRUE)
+# 
+# reticulate::use_virtualenv(virtualenv_dir, required = TRUE)
 ```
 
 ```{r}
